--- a/index.html
+++ b/index.html
@@ -67,24 +67,28 @@
 		</script>
 
 		<style type="text/css">
+			
 			.st0{fill:#E1E2EC;}
-				.st1{fill:none;stroke:#7F7F7F;stroke-width:4.5;stroke-miterlimit:8;stroke-dasharray:4.5,4.5;}
-				.st2{fill:#4CD275;}
-				.st3{fill:none;stroke:#5AAF41;stroke-miterlimit:8;}
-				.st4{fill:none;}
-				.st5{fill:#FFFFFF;}
-				.st6{font-family: 'Open Sans', sans-serif; font-weight: 400;}
-				.st7{font-size:23px;font-family: 'Open Sans', sans-serif; font-weight: 400;}
-				.st8{fill:#6F6F6E;}
-				.st9{font-family: 'Open Sans', sans-serif; font-weight: 600;}
-				.st10{fill:#6641AF;}
-				.st11{font-size:24px;}
-				.st12{fill:#7F7F7F;}
-				.st13{font-size:35px;}
-				.st14{fill:#F6F6FD;}
-				.st15{font-size:26px;font-family: 'Open Sans', sans-serif; font-weight: 600;}
-				.st9{font-family: 'Open Sans', sans-serif; font-weight: 600;}
-				.st6{font-family: 'Open Sans', sans-serif; font-weight: 400;}
+			.st1{fill:none;stroke:#7F7F7F;stroke-width:4.5;stroke-miterlimit:8;stroke-dasharray:4.5,4.5;}
+			.st2{fill:none;stroke:#5AAF41;stroke-miterlimit:8;}
+			.st3{fill:#00D379;}
+			.st4{fill:none;}
+			.st5{fill:#FFFFFF;}
+			.st6{font-family: 'Open Sans', sans-serif; font-weight: 400;}
+			.st7{font-size:23px;font-family: 'Open Sans', sans-serif; font-weight: 400;}
+			.st8{fill:#6F6F6E;}
+			.st9{font-family: 'Open Sans', sans-serif; font-weight: 600;}
+			.st10{fill:#6641AF;}
+			.st11{font-size:24px;}
+			.st12{fill:#4CD275;}
+			.st13{fill:#7F7F7F;}
+			.st14{font-size:35px;}
+			.st15{fill:#A2A8FF;font-size:26px;font-family: 'Open Sans', sans-serif; font-weight: 600; }
+			.st16{font-size:26px;}
+			.st17{fill:#8C00FA;}
+			.st18{font-family:'Open Sans', sans-serif; font-weight: 600;}
+			.st19{fill:#F6F6FD;stroke:#7F7F7F;stroke-width:4.5;stroke-miterlimit:8;stroke-dasharray:4.5,4.5;}		
+			
 			</style>
 	</head>
 
