--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		    	})
 			});
 
-			
+		</script>
 			<style type="text/css">
 	.st0{fill:#E1E2EC;}
 	.st1{fill:none;stroke:#7F7F7F;stroke-width:4.5;stroke-miterlimit:8;stroke-dasharray:4.5,4.5;}
