--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	.st12{fill:#4CD275;}
 	.st13{fill:#7F7F7F;}
 	.st14{font-size:35px;}
-	.st15{fill:#A2A8FF;}
+	.st15{fill:#f6f6fd;}
 	.st16{font-size:26px;}
 	.st17{fill:#8C00FA;}
 	.st18{font-family: 'Open Sans', sans-serif; font-weight: 400;}
