--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
 			["#Continuity_Management", "https://wortell.sharepoint.com/sites/FAQ-Compliance/SitePages/Continuity-Management.aspx"],
 			["#Continuous_Improvement", "https://wortell.sharepoint.com/sites/FAQ-Compliance/SitePages/Continuous-Improvement(1).aspx"],
 
-
+			// ISM
+			["#Agree_1_", "https://wortell.sharepoint.com/sites/FAQ-Operations/SitePages/ISM-Agree.aspx"],
+			["#Change", "https://wortell.sharepoint.com/sites/FAQ-Operations/SitePages/ISM-Change.aspx"],
+			["#Deliver", "https://wortell.sharepoint.com/sites/FAQ-Operations/SitePages/ISM-Deliver.aspx"],		
+			["#Restore", "https://wortell.sharepoint.com/sites/FAQ-Operations/SitePages/ISM-Restore.aspx"],
+			["#Inform", "https://wortell.sharepoint.com/sites/FAQ-Operations/SitePages/ISM-Inform.aspx"],
+			["#Improve_3_", "https://wortell.sharepoint.com/sites/FAQ-Operations/SitePages/ISM-Improve.aspx"],
+				
+				
 
 			]
 
